@startuml classdiagram

package "com.client" {
  class Client {
    -Socket socket
    -ObjectOutputStream objOut
    -ObjectInputStream objIn
    -String username
    +login(String): int
    +sendObject(Object)
    +requestHistory(String)
    +getUsername(): String
    +startListening()
  }
  
  class ClientRunner {
    +start(Stage)
  }
  
  package "controllers.chat" {
    class ChatPageController {
      @FXML Label chatTitleLabel
      @FXML ScrollPane scrollPane
      @FXML VBox messagesBox
      @FXML TextField messageField
      +setClient(Client)
      +setRoom(String)
      +initializeUI(String)
      +appendMessage(String, String, boolean)
      +appendFileMessage(String, String, String, boolean)
      -sendMessage()
      -sendFile(File)
      -handleFileReceived(Packet)
    }
    
    class ChatWindowManager {
      {static} -ArrayList<ChatPageController> openChats
      {static} +register(ChatPageController)
      {static} +handleIncomingMessage(Packet)
      {static} +handleFile(Packet)
    }
  }
  
  package "fx" {
    class FxEventHandler {
      {static} +showAlert(String)
    }
  }
}

' package "com.server" {
'   class Server {
'     -int port
'     -ArrayList<ClientServer> clients
'     -ArrayList<Room> rooms
'     +runServer()
'     +addClient(ClientServer)
'     +findClientByUsername(String): ClientServer
'     +getOrCreatePrivateRoom(ClientServer, ClientServer): Room
'     +findRoomByName(String): Room
'   }
  
'   class ClientHandler {
'     -Socket socket
'     -ObjectInputStream objIn
'     -ObjectOutputStream objOut
'     -ClientServer client
'     +run()
'   }
  
'   class ClientServer {
'     -Socket socket
'     -ObjectOutputStream objOut
'     +getOutputStream(): ObjectOutputStream
'   }
' }

package "com.shared" {
  class Packet {
    -String name
    -Object content
    -ArrayList<?> arrlist
    +getName(): String
    +getContent(): Object
    +getArrlist(): ArrayList<?>
  }
  
  class SimpleClient {
    -String username
    -int id
    +getUsername(): String
    +getId(): int
  }
}

package "com.chat" {
  class Room {
    {static} -int nextRoomId
    -int roomId
    -ArrayList<ClientServer> participants
    -ArrayList<String[]> messageHistory
    +addParticipant(ClientServer)
    +broadcastMessage(String, String)
    +broadcastFile(String, String)
    +getName(): String
    +getMessageHistory(): ArrayList<String[]>
  }
  
  class Message {
    -String msg
    -int idFrom
    +getMsg(): String
    +getIdFrom(): int
  }
}

' === Relationships ===
Client --> Packet : sends/receives
Client --> FxEventHandler : uses
ClientRunner --> Client : launches
ChatPageController --> Client : uses
ChatPageController --> Packet : handles
ChatWindowManager --> ChatPageController : manages
ChatWindowManager --> Packet : routes
' ClientHandler --> Server : belongs to
' ClientHandler --> ClientServer : creates
' ClientHandler --> Packet : reads/writes
' ClientServer ..|> SimpleClient
Client ..|> SimpleClient
' Server --> ClientServer : contains
' Server --> Room : contains
' Room --> ClientServer : has participants
Room --> Packet : broadcasts
Client -->  ChatPageController : registers via ChatWindowManager

@enduml